2004-03-12  Eric Blake  <ebb9@byu.net>

	* src/ast.h (AstMethodInvocation): Split method into base_opt and
	identifier_token.
	* src/ast.cpp (Clone, Print): Use updated AST.
	* src/bytecode.cpp (MethodTypeResolution),
	(EmitAssignmentExpression, EmitMethodInvocation): Ditto.
	* src/definite.cpp (DefiniteMethodInvocation): Ditto.
	* src/expr.cpp (Header, FindMisspelledMethodName),
	(FindMethodInType, FindMethodInEnvironment, CreateAccessToType),
	(CreateAccessToScopedVariable, CreateAccessToScopedMethod),
	(FindVariableMember, FindMethodMember, ProcessMethodName): Ditto.
	* src/java.g (MethodInvocation): Ditto.
	* src/parser.h: Ditto.
	* src/unparse.cpp (Unparse): Ditto.
	* src/javaact.cpp: Regenerate.
	* src/javaact.h: Ditto.
	* src/javadcl.h: Ditto.
	* src/javadef.h: Ditto.

2004-03-11  Elliott Hughes  <enh@acm.org>

	* src/error.cpp: Bug 3896 - failure to find .java files mentioned
	on the command-line should be an error, not a warning. Non .java
	files should also be treated as errors (most likely incorrect
	arguments).

2004-03-11  Elliott Hughes  <enh@acm.org>

	* src/body.cpp, src/semantic.h: add warnings about boolean assignment
	used as a truth value in an if, while, or do expression.
	* src/error.cpp, src/error.h: new diagnostic.

2004-03-10  Eric Blake  <ebb9@byu.net>

	* src/decl.cpp (ReadType): Bug 3852 - fix at least the simple test
	case, where valid A referring to valid B referring to invalid C
	was not caught in A.

2004-03-09  Elliott Hughes  <enh@acm.org>

	* src/expr.cpp (GetAnonymousType): Fix invalid assertion that was
	triggering during placeholder types - bug 3884.

2004-03-07  Elliott Hughes  <enh@acm.org>

	* src/decl.cpp (ProcessInstanceInitializers),
	(ProcessStaticInitializers):
	fix compilation of classes such as Sun's implementation of
	java.lang.Character which use field declarations that declare more
	than one field. The misleading names NumInstanceVariables and
	NumClassVariables actually give the number of field declarations,